# Generated by Django 6.0.1 on 2026-05-18 13:54

import django.db.models.deletion
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ('assignments', '0011_quizquestions_quizchoices_quizsettings_and_more'),
        ('submissions', '0006_submissionfilefeedbacks_submissionfiles_and_more'),
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='QuizAttempts',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('attempt_no', models.PositiveIntegerField(default=1)),
                ('status', models.CharField(choices=[('in_progress', 'Đang làm'), ('submitted', 'Đã nộp'), ('auto_submitted', 'Tự động nộp'), ('expired', 'Hết giờ'), ('cancelled', 'Đã hủy')], default='in_progress', max_length=24)),
                ('started_at', models.DateTimeField(blank=True, null=True)),
                ('submitted_at', models.DateTimeField(blank=True, null=True)),
                ('score', models.FloatField(default=0)),
                ('max_score', models.FloatField(default=0)),
                ('duration_seconds', models.PositiveIntegerField(blank=True, null=True)),
                ('ip_address', models.GenericIPAddressField(blank=True, null=True)),
                ('user_agent', models.TextField(blank=True, null=True)),
                ('random_seed', models.CharField(blank=True, max_length=64, null=True)),
                ('metadata', models.JSONField(blank=True, default=dict, null=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('assignment', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='quiz_attempts', to='assignments.assignments')),
                ('exam_session', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='quiz_attempts', to='submissions.examsessions')),
                ('student', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='quiz_attempts', to=settings.AUTH_USER_MODEL)),
                ('submission', models.ForeignKey(blank=True, help_text='Bản ghi điểm cuối cùng để gradebook/statistics dùng lại.', null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='quiz_attempts', to='submissions.submissions')),
            ],
            options={
                'db_table': 'quiz_attempts',
                'ordering': ('-created_at',),
            },
        ),
        migrations.CreateModel(
            name='QuizAnswers',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('selected_choice_ids', models.JSONField(blank=True, default=list, null=True)),
                ('text_answer', models.TextField(blank=True, null=True)),
                ('is_correct', models.BooleanField(blank=True, null=True)),
                ('score_awarded', models.FloatField(default=0)),
                ('answered_at', models.DateTimeField(blank=True, null=True)),
                ('metadata', models.JSONField(blank=True, default=dict, null=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('question', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='attempt_answers', to='assignments.quizquestions')),
                ('selected_choices', models.ManyToManyField(blank=True, related_name='selected_in_answers', to='assignments.quizchoices')),
                ('attempt', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='answers', to='submissions.quizattempts')),
            ],
            options={
                'db_table': 'quiz_answers',
            },
        ),
        migrations.AddIndex(
            model_name='quizattempts',
            index=models.Index(fields=['assignment', 'student', '-attempt_no'], name='quiza_asg_st_attempt_idx'),
        ),
        migrations.AddIndex(
            model_name='quizattempts',
            index=models.Index(fields=['assignment', 'status', '-updated_at'], name='quiza_asg_status_idx'),
        ),
        migrations.AddIndex(
            model_name='quizattempts',
            index=models.Index(fields=['student', 'status', '-updated_at'], name='quiza_student_status_idx'),
        ),
        migrations.AddIndex(
            model_name='quizattempts',
            index=models.Index(fields=['exam_session'], name='quiza_exam_session_idx'),
        ),
        migrations.AddIndex(
            model_name='quizattempts',
            index=models.Index(fields=['submission'], name='quiza_submission_idx'),
        ),
        migrations.AlterUniqueTogether(
            name='quizattempts',
            unique_together={('assignment', 'student', 'attempt_no')},
        ),
        migrations.AddIndex(
            model_name='quizanswers',
            index=models.Index(fields=['attempt', 'question'], name='quiza_ans_attempt_q_idx'),
        ),
        migrations.AddIndex(
            model_name='quizanswers',
            index=models.Index(fields=['question', 'is_correct'], name='quiza_ans_q_correct_idx'),
        ),
        migrations.AddIndex(
            model_name='quizanswers',
            index=models.Index(fields=['answered_at'], name='quiza_ans_answered_idx'),
        ),
        migrations.AlterUniqueTogether(
            name='quizanswers',
            unique_together={('attempt', 'question')},
        ),
    ]
